--- a/src/components/css/WelcomePage.css
+++ b/src/components/css/WelcomePage.css
@@ -1,13 +1,20 @@
-.welcome-container {
+.welcome-box {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
+.welcome-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 80%;
+}
 .welcome-container h1 {
   margin-top: 70px;
-  font-size: 5rem;
+  font-size: 4rem;
   margin-bottom: 50px;
   color: #ffdcd3;
+  align-self: center;
 }
 .welcome-container h2 {
   font-size: 2rem;
@@ -25,6 +32,7 @@
 }
 .welcome-container ul li p {
   font-size: 1.3rem;
+  align-self: baseline;
 }
 .last {
   height: 10rem;
